feat: Implement modular monolith architecture with vertical slice endpoints for Identity, Tenant, and Vault, and introduce new Core, Contracts, and Infrastructure projects.

--- a/apps/api/Afina.Api/Afina.Api.csproj
+++ b/apps/api/Afina.Api/Afina.Api.csproj
@@ -22,8 +22,8 @@
     <ProjectReference Include="..\Afina.Modules.Vault\Afina.Modules.Vault.csproj" />
     <ProjectReference Include="..\Afina.Modules.Encryption\Afina.Modules.Encryption.csproj" />
     <ProjectReference Include="..\Afina.Modules.Audit\Afina.Modules.Audit.csproj" />
-    <ProjectReference Include="..\Afina.Shared\Afina.Shared.csproj" />
     <ProjectReference Include="..\Afina.Data\Afina.Data.csproj" />
+    <ProjectReference Include="..\Afina.Core\Afina.Core.csproj" />
   </ItemGroup>
 
 </Project>
