feat(users,api): flatten VSA into per-feature folders with separated Request/Response and Shared cross-feature code; remove legacy dirs; add non-prod DB EnsureCreated to fix Users tests and make test green

--- a/apps/api/Afina.Api/appsettings.json
+++ b/apps/api/Afina.Api/appsettings.json
@@ -9,5 +9,10 @@
   "CorsOrigins": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=afina_db;Username=postgres;Password=postgres"
+  },
+  "Jwt": {
+    "Issuer": "Afina.Api",
+    "Audience": "Afina.Api",
+    "SigningKey": "this-is-a-very-long-secure-signing-key-for-jwt-tokens-at-least-256-bits-long"
   }
 }
