--- a/apps/api/Afina.Modules.Encryption/Afina.Modules.Encryption.csproj
+++ b/apps/api/Afina.Modules.Encryption/Afina.Modules.Encryption.csproj
@@ -1,8 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../Afina.Infrastructure/Afina.Infrastructure.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
