--- a/apps/api/Afina.Api/Afina.Api.csproj
+++ b/apps/api/Afina.Api/Afina.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -18,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Afina.Modules.Identity\Afina.Modules.Identity.csproj" />
+    <ProjectReference Include="..\Afina.Modules.Users\Afina.Modules.Users.csproj" />
     <ProjectReference Include="..\Afina.Modules.Tenant\Afina.Modules.Tenant.csproj" />
     <ProjectReference Include="..\Afina.Modules.Vault\Afina.Modules.Vault.csproj" />
     <ProjectReference Include="..\Afina.Modules.Encryption\Afina.Modules.Encryption.csproj" />
