feat(logging): integrate Serilog with Grafana+Loki, add structured logging across all endpoints/handlers/services, remove telemetry, update docs

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,17 @@ CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 
 # Web
 VITE_API_URL=http://localhost:5100
+
+# Logging Configuration (sink)
+# Options: Grafana, StdOut
+LOGGING_PROVIDER=StdOut
+
+# Grafana Configuration (for Grafana logging)
+GRAFANA_LOKI_ENDPOINT=http://loki:3100
+GRAFANA_SERVICE_NAME=afina-api
+GRAFANA_SERVICE_VERSION=1.0.0
+
+# Docker Compose Profiles
+# Available profiles: observability (enables Grafana + Loki)
+# To enable: COMPOSE_PROFILES=observability
+COMPOSE_PROFILES=
