--- a/apps/api/Afina.Api/appsettings.json
+++ b/apps/api/Afina.Api/appsettings.json
@@ -1,9 +1,47 @@
 {
+  "Serilog": {
+    "Using": ["Serilog.Sinks.Console"],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {SourceContext}: {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId",
+      "WithEnvironmentName"
+    ],
+    "Properties": {
+      "Application": "Afina.Api"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
+    },
+    "Provider": "Console"
+  },
+  "Telemetry": {
+    "Provider": "None"
+  },
+  "Grafana": {
+    "LokiEndpoint": "http://localhost:3100",
+    "ServiceName": "afina-api",
+    "ServiceVersion": "1.0.0"
   },
   "AllowedHosts": "*",
   "CorsOrigins": "*",
