--- a/apps/api/Afina.Api/appsettings.Development.json
+++ b/apps/api/Afina.Api/appsettings.Development.json
@@ -1,9 +1,24 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore": "Information"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "OpenTelemetry": {
+    "Enabled": false,
+    "Endpoint": "http://localhost:4317",
+    "ServiceName": "afina-api-dev"
   },
   "CorsOrigins": "http://localhost:3000,http://localhost:5173"
 }
