refactor(frontend): implement registration flow with i18n, modular architecture, and testing

--- a/apps/api/Afina.Modules.Users.Tests/Afina.Modules.Users.Tests.csproj
+++ b/apps/api/Afina.Modules.Users.Tests/Afina.Modules.Users.Tests.csproj
@@ -21,4 +21,7 @@
     <ProjectReference Include="../Afina.Api/Afina.Api.csproj" />
     <ProjectReference Include="../Afina.Modules.Users/Afina.Modules.Users.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
 </Project>
