--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ ASPNETCORE_ENVIRONMENT=Development
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 
 # Web
-VITE_API_URL=http://localhost:5100
+VITE_API_URL=http://localhost:5100/api/v1
 
 # Logging Configuration (sink)
 # Options: Grafana, StdOut
