feat: add pgAdmin for database administration with db-view profile

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 API_PORT=5100
 WEB_PORT=3000
 DB_PORT=5432
+PGADMIN_PORT=5050
 
 # Database
 DB_HOST=postgres
@@ -16,5 +17,10 @@ CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 # Web
 VITE_API_URL=http://localhost:5100/api/v1
 
+# pgAdmin
+PGADMIN_EMAIL=admin@example.com
+PGADMIN_PASSWORD=admin
+
 # Docker Compose Profiles
-COMPOSE_PROFILES=
+# Available profiles: db-view (includes pgAdmin for database administration)
+COMPOSE_PROFILES=db-view
