--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,8 +67,28 @@ services:
     environment:
       - VITE_API_URL=${VITE_API_URL}
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: afina-pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+    ports:
+      - "${PGADMIN_PORT}:80"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - afina-network
+    profiles:
+      - db-view
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+
 volumes:
   postgres-data:
+    driver: local
+  pgadmin-data:
     driver: local
 
 networks:
