--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+# Afina Environment Configuration
+# 
+# Accepted Environments:
+# - dev: default for local development
+# - test: testing environment (unit tests + integration tests)
+# - sandbox: staging environment
+# - prod: production environment
+
 # Ports
 API_PORT=5100
 WEB_PORT=3000
@@ -11,11 +19,11 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 
 # API
-ASPNETCORE_ENVIRONMENT=Development
+ENV=dev
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 
 # Web
-VITE_API_URL=http://localhost:5100/api/v1
+FRONTEND_API_BASE_URL=http://localhost:5100/api/v1
 
 # pgAdmin
 PGADMIN_EMAIL=admin@example.com
