--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       dockerfile: Dockerfile
     container_name: afina-api
     environment:
-      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
+      - ASPNETCORE_ENVIRONMENT=${ENV}
       - ASPNETCORE_URLS=http://+:8080
       - ConnectionStrings__DefaultConnection=Host=${DB_HOST};Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD}
       - CorsOrigins=${CORS_ORIGINS}
@@ -56,7 +56,7 @@ services:
       context: ./apps/web
       dockerfile: Dockerfile
       args:
-        VITE_API_URL: ${VITE_API_URL}
+        VITE_API_URL: ${FRONTEND_API_BASE_URL}
     container_name: afina-web
     ports:
       - "${WEB_PORT}:80"
@@ -65,7 +65,7 @@ services:
     networks:
       - afina-network
     environment:
-      - VITE_API_URL=${VITE_API_URL}
+      - VITE_API_URL=${FRONTEND_API_BASE_URL}
 
   pgadmin:
     image: dpage/pgadmin4:latest
