refactor: rename Afina.Api to Afina.ApiApp and remove migration endpoint

--- a/apps/api/Afina.ApiApp/appsettings.json
+++ b/apps/api/Afina.ApiApp/appsettings.json
@@ -25,7 +25,7 @@
       "WithEnvironmentName"
     ],
     "Properties": {
-      "Application": "Afina.Api"
+      "Application": "Afina.ApiApp"
     }
   },
   "Logging": {
@@ -44,8 +44,8 @@
     "DefaultConnection": "Host=localhost;Database=afina_db;Username=postgres;Password=postgres"
   },
   "Jwt": {
-    "Issuer": "Afina.Api",
-    "Audience": "Afina.Api",
+    "Issuer": "Afina.ApiApp",
+    "Audience": "Afina.ApiApp",
     "SigningKey": "this-is-a-very-long-secure-signing-key-for-jwt-tokens-at-least-256-bits-long"
   }
 }
