--- a/apps/api/Afina.Modules.Users.Tests/Afina.Modules.Users.Tests.csproj
+++ b/apps/api/Afina.Modules.Users.Tests/Afina.Modules.Users.Tests.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="FluentAssertions" Version="7.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="../Afina.Api/Afina.Api.csproj" />
+    <ProjectReference Include="../Afina.ApiApp/Afina.ApiApp.csproj" />
     <ProjectReference Include="../Afina.Modules.Users/Afina.Modules.Users.csproj" />
   </ItemGroup>
   <ItemGroup>
