--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           node-version: "24"
 
+      - name: Setup environment
+        run: cp .env.example .env
+
       - name: Clean
         run: make clean-native
 
