--- a/apps/api/Afina.ApiApp/appsettings.json
+++ b/apps/api/Afina.ApiApp/appsettings.json
@@ -41,7 +41,7 @@
   "AllowedHosts": "*",
   "CorsOrigins": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=afina_db;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Database=afina_db;Username=postgres;Password=postgres;SearchPath=public"
   },
   "Jwt": {
     "Issuer": "Afina.ApiApp",
